overflow fixed

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -1,5 +1,4 @@
 html, body {
-    overflow-x: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
 
